First commit. Adding README.txt file just to get started

--- a/git-example/murders/report.Rmd
+++ b/git-example/murders/report.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Report on Gun Murders"
-author: "Rafael Irizarry"
+author: "Sabiny Chungath"
 date: "`r format(Sys.Date())`"
 output: github_document
 ---
